--- a/src/components/css/ProductCard.css
+++ b/src/components/css/ProductCard.css
@@ -16,6 +16,7 @@
     max-width: 100%;
     height: auto;
     border-radius: 20px 20px 0 0;
+    padding-top: 20px;
 }
 .ArticleCard{
     background: white;
